--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings":{
+    "Token": "super secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Datasource=datingapp.db"
   },
